Separation of concerns: TwitchLink struct and Guess namespace

--- a/Camomile/Camomile.csproj
+++ b/Camomile/Camomile.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Guess.cs" />
+    <Compile Include="TwitchLink.cs" />
     <Compile Include="Ini.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
